--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,8 +15,7 @@ jobs:
           go-version: '1.12'
 
       - name: Build
-        working-directory: cmd/tcp_over_http
-        run: go build
+        run: go install ./...
 
       - name: Upload API
         uses: actions/upload-artifact@v3
